@@ -5,6 +5,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import com.dentalwings.approvalbot.ado.http.AzureDevOpsAuth;
 import com.dentalwings.approvalbot.ado.http.AzureDevOpsUrlBuilder;
 import java.util.ArrayList;
+import java.util.List;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
@@ -21,7 +22,7 @@ class AzureDevOpsConfigDiscoveryServiceTest {
     @Test
     void validateProjectUsesReadOnlyProjectEndpointAndBasicAuthWithoutExposingPatInUrl() {
         var exchange = new RecordingExchangeFunction("""
-                {"name":"ADOnis 2.0 Test Project"}
+                {"id":"project-id-1","name":"ADOnis 2.0 Test Project"}
                 """, HttpStatus.OK);
         var service = discovery(exchange);
 
@@ -38,8 +39,8 @@ class AzureDevOpsConfigDiscoveryServiceTest {
 
     @Test
     void listWorkItemTypesReturnsNamesFromAdoResponse() {
-        var exchange = new RecordingExchangeFunction("""
-                {"count":2,"value":[{"name":"Bug"},{"name":"Test Case"}]}
+        var exchange = processDiscoveryExchange("""
+                {"count":2,"value":[{"name":"Bug","referenceName":"Microsoft.VSTS.WorkItemTypes.Bug"},{"name":"Test Case","referenceName":"Microsoft.VSTS.WorkItemTypes.TestCase"}]}
                 """, HttpStatus.OK);
         var service = discovery(exchange);
 
@@ -47,17 +48,22 @@ class AzureDevOpsConfigDiscoveryServiceTest {
 
         assertThat(result.status()).isEqualTo(ConfigValidationStatus.VALID);
         assertThat(result.values()).containsExactly("Bug", "Test Case");
-        assertThat(exchange.requests.getFirst().url().toString())
-                .isEqualTo("https://dev.azure.com/STMN-Group/ADOnis%202.0%20Test%20Project/_apis/wit/workitemtypes?$expand=None&api-version=7.1")
-                .contains("$expand=None")
+        assertThat(exchange.requests).hasSize(3);
+        assertThat(exchange.requests.get(0).url().toString())
+                .isEqualTo("https://dev.azure.com/STMN-Group/_apis/projects/ADOnis%202.0%20Test%20Project?api-version=7.1")
                 .contains("ADOnis%202.0%20Test%20Project")
                 .doesNotContain("%24expand", "%2520");
+        assertThat(exchange.requests.get(1).url().toString())
+                .isEqualTo("https://dev.azure.com/STMN-Group/_apis/projects/project-id-1/properties?keys=System.ProcessTemplateType,System.CurrentProcessTemplateId,System.Process%20Template&api-version=7.1-preview.1");
+        assertThat(exchange.requests.get(2).url().toString())
+                .isEqualTo("https://dev.azure.com/STMN-Group/_apis/work/processes/process-id-1/workitemtypes?api-version=7.1")
+                .doesNotContain("/_apis/wit/workitemtypes");
     }
 
     @Test
     void listWorkItemTypeOptionsMapsAdoValueArrayToSelectorOptions() {
-        var exchange = new RecordingExchangeFunction("""
-                {"count":1,"values":[{"name":"Wrong"}],"value":[{"name":"Test Case"}]}
+        var exchange = processDiscoveryExchange("""
+                {"count":1,"values":[{"name":"Wrong"}],"value":[{"name":"Test Case","referenceName":"Microsoft.VSTS.WorkItemTypes.TestCase","description":"Test validation case"}]}
                 """, HttpStatus.OK);
         var service = discovery(exchange);
 
@@ -69,17 +75,20 @@ class AzureDevOpsConfigDiscoveryServiceTest {
                 .satisfies(option -> {
                     assertThat(option.value()).isEqualTo("Test Case");
                     assertThat(option.displayName()).isEqualTo("Test Case");
+                    assertThat(option.referenceName()).isEqualTo("Microsoft.VSTS.WorkItemTypes.TestCase");
+                    assertThat(option.description()).isEqualTo("Test validation case");
                     assertThat(option.source()).isEqualTo("ADO");
                 });
-        assertThat(exchange.requests).hasSize(1);
-        assertThat(exchange.requests.getFirst().url().toString())
-                .contains("/_apis/wit/workitemtypes?$expand=None&api-version=7.1")
-                .doesNotContain("/fields");
+        assertThat(exchange.requests).hasSize(3);
+        assertThat(exchange.requests)
+                .extracting(request -> request.url().toString())
+                .noneMatch(url -> url.contains("/_apis/wit/workitemtypes?"))
+                .noneMatch(url -> url.contains("/fields"));
     }
 
     @Test
     void emptyAdoDiscoveryResponseReturnsWarningWithOptionCountZero() {
-        var service = discovery(new RecordingExchangeFunction("""
+        var service = discovery(processDiscoveryExchange("""
                 {"value":[]}
                 """, HttpStatus.OK));
 
@@ -163,7 +172,7 @@ class AzureDevOpsConfigDiscoveryServiceTest {
 
     @Test
     void retryableAdoFailureMapsToErrorBecauseDiscoveryWasAttempted() {
-        var service = discovery(new RecordingExchangeFunction("""
+        var service = discovery(processDiscoveryExchange("""
                 {"message":"ADO is temporarily unavailable."}
                 """, HttpStatus.SERVICE_UNAVAILABLE));
 
@@ -194,7 +203,25 @@ class AzureDevOpsConfigDiscoveryServiceTest {
     void dataBufferLimitFailureMapsToErrorBecauseDiscoveryWasAttempted() {
         var service = new AzureDevOpsConfigDiscoveryService(
                 "secret-pat",
-                request -> Mono.error(new DataBufferLimitException("Exceeded limit on max bytes to buffer : 262144")),
+                request -> {
+                    if (request.url().toString().contains("/_apis/work/processes/")) {
+                        return Mono.error(new DataBufferLimitException("Exceeded limit on max bytes to buffer : 262144"));
+                    }
+                    if (request.url().toString().contains("/properties?")) {
+                        return Mono.just(ClientResponse.create(HttpStatus.OK)
+                                .header(HttpHeaders.CONTENT_TYPE, "application/json")
+                                .body("""
+                                        {"value":[{"name":"System.CurrentProcessTemplateId","value":"process-id-1"}]}
+                                        """)
+                                .build());
+                    }
+                    return Mono.just(ClientResponse.create(HttpStatus.OK)
+                            .header(HttpHeaders.CONTENT_TYPE, "application/json")
+                            .body("""
+                                    {"id":"project-id-1","name":"ADOnis 2.0 Test Project"}
+                                    """)
+                            .build());
+                },
                 new AzureDevOpsUrlBuilder()
         );
 
@@ -206,6 +233,78 @@ class AzureDevOpsConfigDiscoveryServiceTest {
                 .contains("DataBufferLimitException")
                 .contains("262144")
                 .doesNotContain("secret-pat");
+    }
+
+    @Test
+    void processDiscoveryTriesCandidateProcessPropertiesDeterministically() {
+        var exchange = new RecordingExchangeFunction(List.of(
+                new RecordedResponse("""
+                        {"id":"project-id-1","name":"ADOnis 2.0 Test Project"}
+                        """, HttpStatus.OK),
+                new RecordedResponse("""
+                        {"value":[
+                            {"name":"System.CurrentProcessTemplateId","value":"bad-process-id"},
+                            {"name":"System.ProcessTemplateType","value":"process-id-1"}
+                        ]}
+                        """, HttpStatus.OK),
+                new RecordedResponse("""
+                        {"message":"not a process"}
+                        """, HttpStatus.NOT_FOUND),
+                new RecordedResponse("""
+                        {"value":[{"name":"Test Case"}]}
+                        """, HttpStatus.OK)
+        ));
+        var service = discovery(exchange);
+
+        var result = service.listWorkItemTypeOptions("STMN-Group", "ADOnis 2.0 Test Project");
+
+        assertThat(result.status()).isEqualTo(ConfigValidationStatus.VALID);
+        assertThat(result.values()).extracting(ConfigSelectorOption::value).containsExactly("Test Case");
+        assertThat(exchange.requests.get(2).url().toString())
+                .contains("/_apis/work/processes/bad-process-id/workitemtypes?api-version=7.1");
+        assertThat(exchange.requests.get(3).url().toString())
+                .contains("/_apis/work/processes/process-id-1/workitemtypes?api-version=7.1");
+    }
+
+    @ParameterizedTest
+    @CsvSource({
+            "BAD_REQUEST,failed with status 400",
+            "FORBIDDEN,authorization failed",
+            "NOT_FOUND,not found"
+    })
+    void projectPropertiesFailuresMapToError(HttpStatus status, String expectedMessage) {
+        var exchange = new RecordingExchangeFunction(List.of(
+                new RecordedResponse("""
+                        {"id":"project-id-1","name":"ADOnis 2.0 Test Project"}
+                        """, HttpStatus.OK),
+                new RecordedResponse("""
+                        {"message":"The process properties could not be discovered."}
+                        """, status)
+        ));
+        var service = discovery(exchange);
+
+        var result = service.listWorkItemTypeOptions("STMN-Group", "ADOnis 2.0 Test Project");
+
+        assertThat(result.status()).isEqualTo(ConfigValidationStatus.ERROR);
+        assertThat(result.message()).contains(expectedMessage);
+        assertThat(exchange.requests.get(1).url().toString()).contains("/properties?");
+    }
+
+    @ParameterizedTest
+    @CsvSource({
+            "BAD_REQUEST,failed with status 400",
+            "FORBIDDEN,authorization failed",
+            "NOT_FOUND,not found"
+    })
+    void processWorkItemTypeFailuresMapToError(HttpStatus status, String expectedMessage) {
+        var service = discovery(processDiscoveryExchange("""
+                {"message":"The process work item types could not be discovered."}
+                """, status));
+
+        var result = service.listWorkItemTypeOptions("STMN-Group", "ADOnis 2.0 Test Project");
+
+        assertThat(result.status()).isEqualTo(ConfigValidationStatus.ERROR);
+        assertThat(result.message()).contains(expectedMessage);
     }
 
     @Test
@@ -222,23 +321,41 @@ class AzureDevOpsConfigDiscoveryServiceTest {
         return new AzureDevOpsConfigDiscoveryService("secret-pat", exchange, new AzureDevOpsUrlBuilder());
     }
 
+    private RecordingExchangeFunction processDiscoveryExchange(String processWorkItemTypesBody, HttpStatus processStatus) {
+        return new RecordingExchangeFunction(List.of(
+                new RecordedResponse("""
+                        {"id":"project-id-1","name":"ADOnis 2.0 Test Project"}
+                        """, HttpStatus.OK),
+                new RecordedResponse("""
+                        {"value":[{"name":"System.CurrentProcessTemplateId","value":"process-id-1"}]}
+                        """, HttpStatus.OK),
+                new RecordedResponse(processWorkItemTypesBody, processStatus)
+        ));
+    }
+
+    private record RecordedResponse(String body, HttpStatus status) {
+    }
+
     private static class RecordingExchangeFunction implements ExchangeFunction {
 
-        private final String body;
-        private final HttpStatus status;
+        private final List<RecordedResponse> responses;
         private final ArrayList<ClientRequest> requests = new ArrayList<>();
 
         private RecordingExchangeFunction(String body, HttpStatus status) {
-            this.body = body;
-            this.status = status;
+            this(List.of(new RecordedResponse(body, status)));
+        }
+
+        private RecordingExchangeFunction(List<RecordedResponse> responses) {
+            this.responses = responses;
         }
 
         @Override
         public Mono<ClientResponse> exchange(ClientRequest request) {
             requests.add(request);
-            return Mono.just(ClientResponse.create(status)
+            var response = responses.get(Math.min(requests.size() - 1, responses.size() - 1));
+            return Mono.just(ClientResponse.create(response.status())
                     .header(HttpHeaders.CONTENT_TYPE, "application/json")
-                    .body(body)
+                    .body(response.body())
                     .build());
         }
     }
